Correccion del titulo H1 del index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
 </head>
 <body>
-        <h1>Titulo de nivel 1
+        <h1>Titulo Cargado para efectos de GIT
 </h1>
         <br>
        <hr>
