--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet">
 </head>
 <body>
-        <h1>Titulo de nivel 1
-</h1>
+        <h1>Proyecto myQuiz</h1>
         <br>
        <hr>
 
